--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,40 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap");
 body {
   margin: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   font-family: Inter, Arial;
   background-color: #fdfdfd;
+}
+
+div#keyinfostart {
+  background-color: #fff;
+  -webkit-box-shadow: 0px 3px 6px 1px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 3px 6px 1px rgba(0, 0, 0, 0.1);
+  -webkit-transition-duration: .08s;
+          transition-duration: .08s;
+  text-align: center;
+  margin: 8px;
+  border-radius: 4px;
+  margin-top: 128px;
+  color: #3a3a3a;
+  font-size: 130%;
+  font-weight: bold;
+}
+
+div#keyinfostart p {
+  margin: 16px 64px 16px 64px;
 }
 
 .ghlink {
@@ -28,11 +48,12 @@ body {
 }
 
 .ghlink a:hover {
-  text-decoration: underline;
+  -webkit-text-decoration-color: black;
+          text-decoration-color: black;
 }
 
 .keyinfo-list {
-  margin-top: 196px;
+  margin-top: 128px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -41,87 +62,90 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  display: none;
 }
 
-.keyinfo-list div {
-  width: 280px;
-  border: 1px solid #ddd;
-  margin: 8px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.05);
-          box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.05);
-  background-color: white;
-}
-
-.keyinfo-list div:hover {
-  -webkit-box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.08);
-          box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.08);
-  -webkit-transform: translateY(-1px);
-          transform: translateY(-1px);
-}
-
-.keyinfo-list div p {
-  margin: 0px;
-  font-size: 2.5rem;
-  padding: 8px 0px 8px 0px;
-}
-
-.keyinfo-list div p:first-of-type {
-  padding: 4px 0px 4px 0px;
-  font-weight: bold;
-  font-size: 1rem;
-  border-bottom: 1px solid #ddd;
-  width: 100%;
+.keyinfo-list table {
+  background-color: #fff;
+  -webkit-box-shadow: 0px 3px 6px 1px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 3px 6px 1px rgba(0, 0, 0, 0.1);
+  -webkit-transition-duration: .08s;
+          transition-duration: .08s;
   text-align: center;
-  background-color: #eee;
-}
-
-table {
-  border: 1px solid #ddd;
-  border-collapse: collapse;
-  margin-top: 128px;
-  margin-bottom: 64px;
-  -webkit-box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.05);
-          box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.05);
-}
-
-table tr:nth-child(even) {
-  background-color: white;
-}
-
-table tr:nth-child(odd) {
-  background-color: #efe;
-}
-
-table th {
-  border: 1px solid #ddd;
-  background-color: #eee;
-  padding: 8px 16px 8px 16px;
+  margin: 8px;
+  border-radius: 4px;
   min-width: 240px;
+  border-spacing: 8px;
 }
 
-table td {
-  border: 1px solid #ddd;
-  padding: 8px 16px 8px 16px;
+.keyinfo-list table p {
+  margin: 0px;
 }
 
-table td:hover {
-  -webkit-box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.08);
-          box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.08);
+.keyinfo-list table p.keyinfop {
+  color: #3a3a3a;
+  font-size: 95%;
+}
+
+.keyinfo-list table p.keyinfod {
+  color: black;
+  font-size: 150%;
+  font-weight: bold;
+}
+
+.keyinfo-list table:hover {
+  -webkit-box-shadow: 0px 3px 6px 1px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 3px 6px 1px rgba(0, 0, 0, 0.15);
   -webkit-transform: translateY(-1px);
           transform: translateY(-1px);
+  -webkit-transition-duration: .1s;
+          transition-duration: .1s;
+}
+
+table#table {
+  max-width: 100vw;
+  display: block;
+  border-radius: 8px;
+  overflow-x: auto;
+  border: 0px solid transparent;
+  border-spacing: 0px;
+  border-collapse: separate;
+  margin: 0;
+  margin-top: 64px;
+  margin-bottom: 32px;
+  -webkit-box-shadow: 0px 3px 6px 1px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 3px 6px 1px rgba(0, 0, 0, 0.1);
+}
+
+table#table tr, table#table td {
+  margin: 16px;
+}
+
+table#table th {
+  min-width: 160px;
+  padding: 8px 16px 8px 16px;
+  background-color: #f5f5f5;
+}
+
+table#table td {
+  padding: 8px 16px 8px 16px;
+}
+
+table#table tr {
+  background-color: #fdfdfd;
+}
+
+table#table tr.trhover:nth-child(even) {
+  background-color: #fafafa;
+  font-style: italic;
+}
+
+table#table tr.trhover:hover {
+  -webkit-transform: translateY(-1px);
+          transform: translateY(-1px);
+  background-color: #fefefe;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(90, 90, 90, 0.1);
+          box-shadow: 0px 0px 10px 0px rgba(90, 90, 90, 0.1);
 }
 
 /* Made by Thundiverter */
@@ -142,5 +166,11 @@ table td:hover {
 
 #madebythundiverter a:hover {
   text-decoration: underline;
+}
+
+@media (min-width: 540px) {
+  table#table th {
+    min-width: 240px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
