--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,8 @@ table#table td {
 
 table#table tr {
   background-color: #fdfdfd;
+  -webkit-transition-duration: .1s;
+          transition-duration: .1s;
 }
 
 table#table tr.trhover:nth-child(even) {
@@ -145,8 +147,11 @@ table#table tr.trhover:hover {
   -webkit-transform: translateY(-1px);
           transform: translateY(-1px);
   background-color: #fefefe;
+  font-weight: bold;
   -webkit-box-shadow: 0px 0px 10px 0px rgba(90, 90, 90, 0.1);
           box-shadow: 0px 0px 10px 0px rgba(90, 90, 90, 0.1);
+  -webkit-transition-duration: .1s;
+          transition-duration: .1s;
 }
 
 /* Made by Thundiverter */
